# messenger

backend/: .env  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/models/: mod.rs
backend/src/services/: entry.rs
backend/static/: index.html
backend/static/assets/: index-BBxuoWwf.css  index-DI_cWHzE.js
frontend/src/: Entry.tsx  index.css  main.tsx
