[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
lettre = "0.11.22"
lettre_email = "0.9.4"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
